sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/count_of_lines__c.field-meta.xml
<CustomField>
    <fullName>count_of_lines__c</fullName>
    <label>count of lines</label>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>