sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Count_PO_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_PO_Line_Items__c</fullName>
    <label>Count PO Line Items Partially</label>
    <summaryFilterItems>
        <field>Purchase_Order_Line_Item__c.Po_line_Receipt_Status__c</field>
        <operation>equals</operation>
        <value>Items Partially Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>