sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Count_PO_Line_Items_Fully__c.field-meta.xml
<CustomField>
    <fullName>Count_PO_Line_Items_Fully__c</fullName>
    <label>Count PO Line Items Closed</label>
    <summaryFilterItems>
        <field>Purchase_Order_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>