sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Count_PO_Line_Items_No__c.field-meta.xml
<CustomField>
    <fullName>Count_PO_Line_Items_No__c</fullName>
    <label>Count PO Line Items</label>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>