sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sameer Park - Office</fullName>
            </value>
            <value>
                <fullName>Sameer Park - WH</fullName>
            </value>
            <value>
                <fullName>Mathare</fullName>
            </value>
            <value>
                <fullName>Kinanie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>