sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>