sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <formula>Firm_Date__c  + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>