sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Firm_Date__c.field-meta.xml
<CustomField>
    <fullName>Firm_Date__c</fullName>
    <inlineHelpText>Date PO is firmed</inlineHelpText>
    <label>Firm Date</label>
    <type>Date</type>
</CustomField>