sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Is_Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Is_Retrospective__c</fullName>
    <label>Is Retrospective?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>