sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>The next step in the PO approval process</description>
    <inlineHelpText>The next step in the PO approval process</inlineHelpText>
    <label>Next Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>