sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Firmed</fullName>
            </value>
            <value>
                <fullName>Pending Director Approval</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>Pending Procurement Approval</fullName>
            </value>
            <value>
                <fullName>Ready for Vendor Notification</fullName>
            </value>
            <value>
                <fullName>Vendor Notified</fullName>
            </value>
            <value>
                <fullName>Vendor Invoice Generated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Items Partially Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>