sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment Terms on the Contract</description>
    <formula>IF( ISPICKVAL( Contract_Number__r.Payment_Terms__c , &quot;Pre-payment&quot;), &quot;Pre-payment&quot;, 
IF( ISPICKVAL( Contract_Number__r.Payment_Terms__c , &quot;On Invoice&quot;), &quot;On Invoice&quot;, 
IF( ISPICKVAL( Contract_Number__r.Payment_Terms__c , &quot;7 Days&quot;), &quot;7 Days&quot;, 
IF( ISPICKVAL( Contract_Number__r.Payment_Terms__c , &quot;15 Days&quot;), &quot;15 Days&quot;, 
IF( ISPICKVAL( Contract_Number__r.Payment_Terms__c , &quot;30 Days&quot;) , &quot;30 Days&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Terms on the Contract</inlineHelpText>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>