sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Percentage_Being_Paid__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Being_Paid__c</fullName>
    <label>Percentage Being Paid</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>