sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/PO_Currency__c.field-meta.xml
<CustomField>
    <fullName>PO_Currency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PO Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Currency_Config__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>