sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/PO_Source__c.field-meta.xml
<CustomField>
    <fullName>PO_Source__c</fullName>
    <label>PO Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Payment Request</fullName>
            </value>
            <value>
                <fullName>Recurring Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>