sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Total_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Amount__c</fullName>
    <inlineHelpText>Total Net Amount less VAT</inlineHelpText>
    <label>Total Net Amount</label>
    <summarizedField>Purchase_Order_Line_Item__c.Total_Net_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>