sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Total_Sanergy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Sanergy_Cost__c</fullName>
    <label>Total Sanergy Cost</label>
    <summarizedField>Purchase_Order_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order_Line_Item__c.Requesting_Company__c</field>
        <operation>equals</operation>
        <value>&#39;aEBD0000000k9yM&#39;</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>