sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Total_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_Amount__c</fullName>
    <inlineHelpText>Total VAT amount</inlineHelpText>
    <label>Total VAT Amount</label>
    <summarizedField>Purchase_Order_Line_Item__c.Total_VAT_Amount__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Line_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>