sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/fields/Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Invoice</label>
    <referenceTo>Vendor_Invoice__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>