sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/recordTypes/After_Firm.recordType-meta.xml
<RecordType>
    <fullName>After_Firm</fullName>
    <active>true</active>
    <label>After Firm</label>
</RecordType>