sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/recordTypes/BeforeFinanceApproval.recordType-meta.xml
<RecordType>
    <fullName>BeforeFinanceApproval</fullName>
    <active>true</active>
    <label>BeforeFinanceApproval</label>
</RecordType>