sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/listViews/All_Purchase_Orders_VI_Generated.listView-meta.xml
<ListView>
    <fullName>All_Purchase_Orders_VI_Generated</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>Approved__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Status__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Vendor Invoice Generated,Vendor Notified</value>
    </filters>
    <label>All Purchase Orders VI Generated</label>
    <language>en_US</language>
</ListView>