sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/listViews/FLI_Directors_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>