sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/listViews/Pending_Finance_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Finance_Approval</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Currency__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Firm_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Pending Finance Approval</value>
    </filters>
    <label>Pending Finance Approval</label>
    <language>en_US</language>
</ListView>