sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/listViews/POs_Pending_Director_Approval.listView-meta.xml
<ListView>
    <fullName>POs_Pending_Director_Approval</fullName>
    <columns>Next_Step_Due_Date__c</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PO_Currency__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Firm_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Step__c</field>
        <operation>equals</operation>
        <value>Pending Director Approval</value>
    </filters>
    <label>POs - (1) Pending Director Approval</label>
    <language>en_US</language>
</ListView>