sfSandBoxCode/force-app/main/default/objects/Purchase_Order__c/listViews/Recently_Created_PO_s.listView-meta.xml
<ListView>
    <fullName>Recently_Created_PO_s</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Vendor_Account__c</columns>
    <columns>Expected_Date__c</columns>
    <columns>Approved__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Status__c</columns>
    <columns>Next_Step__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Recently Created PO&#39;s</label>
    <language>en_US</language>
</ListView>